contain background phone image, preventing overflow (#258)

--- a/src/styl/layout.styl
+++ b/src/styl/layout.styl
@@ -103,7 +103,7 @@ canvas
 
 .clearfix
 	clear both
-	
+
 *
 	-ms-overflow-style none
 
@@ -160,6 +160,7 @@ canvas
 
 		.phone-wrap
 			background-image url('/assets/iphone-6.svg')
+			background-size contain
 			transform scale(1)
 			transform-origin top
 			height 881px
@@ -182,7 +183,7 @@ canvas
 	padding 0 10px
 	min-width 100px
 	@import 'chart-editor.styl'
-	
+
 @media screen and (max-width: $single_column_breakpoint)
 	.header
 		position relative
@@ -204,4 +205,3 @@ canvas
 		margin-left 0
 		display block
 		width 100%
-
